Started adding code for scraping sections of a workload.

--- a/VsDownloader/Views/LanguageView.xaml
+++ b/VsDownloader/Views/LanguageView.xaml
@@ -19,7 +19,7 @@
         </i:EventTrigger>
     </i:Interaction.Triggers>
     <Grid>
-        <ListBox ItemsSource="{Binding Path=Languages, Mode=OneWay}">
+        <ListBox HorizontalContentAlignment="Stretch" ItemsSource="{Binding Path=Languages, Mode=OneWay}">
             <ListBox.ItemTemplate>
                 <DataTemplate>
                     <CheckBox IsChecked="{Binding Path=IsSelected, Mode=TwoWay}">
